# moai-dev

./: .gitignore  SUPPORT_ANDROID.md
3rdparty-android/facebook-3.22.0/project/: build.gradle
3rdparty-android/google-play-services/: classpath.xml
cmake/cmake-modules/: module-config.cmake  module-setup.cmake  platform-ios.cmake
cmake/hosts/host-android/: android.toolchain.cmake
cmake/hosts/host-modules/: CMakeLists.txt
cmake/libmoai/: CMakeLists.txt
cmake/libmoai/moai-android/: CMakeLists.txt
cmake/libmoai/moai-apple/: CMakeLists.txt
cmake/libmoai/moai-fmod-studio/: CMakeLists.txt
cmake/libmoai/moai-iphone/: CMakeLists.txt
cmake/libmoai/moai-iphone/moai-ios-adtoapp/: CMakeLists.txt
cmake/libmoai/moai-iphone/moai-ios-chartboost/: CMakeLists.txt
cmake/libmoai/moai-iphone/moai-ios-crashlytics/: CMakeLists.txt
cmake/libmoai/moai-iphone/moai-ios-vungle/: CMakeLists.txt
samples/anim-curve-draw/: main.lua
samples/font/font-effects-edtaa/: MOAIFontEffectsShader.fsh  main.lua
samples/image-copyRect-shrink/: main.lua
samples/multitexture/: main.lua
samples/particles/particles-distanceEmitter/: main.lua
samples/physics/physics-liquidfun/: main.lua
samples/physics/physics-liquidfun-elastic/: main.lua
samples/physics/physics-liquidfun-rigid/: main.lua
samples/physics/physics-raycast/: main.lua
samples/scriptNode/: main.lua
samples/scriptNode-text/: main.lua
src/config-default/: moai_config.h
src/host-modules/: aku_modules.cpp  aku_modules.h  aku_modules_android.h  aku_modules_android_config.h  aku_modules_config.h  aku_modules_ios.h  aku_modules_ios.mm  aku_modules_ios_config.h
src/lua-headers/: moai.lua  moai_lua.h
src/moai-android/: JniUtils.cpp  JniUtils.h  MOAIAppAndroid.cpp  MOAIAppAndroid.h  MOAIBillingAndroid.cpp  MOAIBrowserAndroid.cpp  MOAINotificationsAndroid.cpp  Moai.java  MoaiActivity.java
src/moai-android-chartboost/: MOAIChartBoostAndroid.cpp  MOAIChartboostAndroid.cpp  MOAIChartboostAndroid.h  host.cpp
src/moai-android-crashlytics/: MOAICrashlyticsAndroid.cpp  MOAICrashlyticsAndroid.h  host.cpp
src/moai-android-facebook/: MOAIFacebookAndroid.cpp  MOAIFacebookAndroid.h  MoaiFacebook.java
src/moai-android-flurry/: MOAIFlurryAndroid.cpp  MOAIFlurryAndroid.h  MoaiFlurry.java
src/moai-android-flurry-ads/: MOAIFlurryAdsAndroid.cpp
src/moai-android-fmod-studio/: MoaiFmodStudio.java
src/moai-android-google-analytics/: MOAIGoogleAnalyticsAndroid.cpp
src/moai-android-google-billing/: MoaiGoogleBilling.java
src/moai-android-google-play-services-games/: MOAIGooglePlayServicesGamesAndroid.cpp  MoaiGooglePlayServicesGames.java
src/moai-box2d/: MOAIBox2DArbiter.cpp  MOAIBox2DArbiter.h  MOAIBox2DDebugDraw.cpp  MOAIBox2DDebugDraw.h  MOAIBox2DFixture.cpp  MOAIBox2DFixture.h  MOAIBox2DParticle.cpp  MOAIBox2DParticle.h  MOAIBox2DParticleGroup.cpp  MOAIBox2DParticleGroup.h  MOAIBox2DParticleSystem.cpp  MOAIBox2DParticleSystem.h  MOAIBox2DShape.cpp  MOAIBox2DShape.h  MOAIBox2DWeldJoint.cpp  MOAIBox2DWeldJoint.h  MOAIBox2DWorld.cpp  MOAIBox2DWorld.h  headers.h  host.cpp
src/moai-core/: MOAIGlobals.h  MOAILogMessages.cpp  MOAILogMessages.h  MOAILogMgr.cpp  MOAILuaObject.cpp  MOAILuaObject.h
src/moai-fmod-studio/: MOAIFmodStudio.cpp  MOAIFmodStudioChannel.cpp  host.cpp
src/moai-http-client/: MOAIHttpTaskBase.cpp  MOAIHttpTaskBase.h  MOAIHttpTaskCurl.cpp  MOAIHttpTaskCurl.h  MOAIHttpTaskNSURL.h  MOAIHttpTaskNSURL.mm  MOAIHttpTaskNaCl.cpp  MOAIHttpTaskNaCl.h  MOAIUrlMgrCurl.cpp
src/moai-ios/: MOAIAppIOS.h  MOAIAppIOS.mm  MOAIKeyboardIOS.h  MOAIKeyboardIOS.mm  MOAINotificationsIOS.h  MOAINotificationsIOS.mm  MOAIWebViewController.mm  MOAIWebViewIOS.mm  headers.h  host.h  host.mm
src/moai-ios-adcolony/: MOAIAdColonyIOS.h  MOAIAdColonyIOS.mm
src/moai-ios-adtoapp/: MOAIAdToAppIOS.h  MOAIAdToAppIOS.mm
src/moai-ios-billing/: MOAIBillingIOS.h  MOAIBillingIOS.mm
src/moai-ios-chartboost/: MOAIChartBoostIOS.h  MOAIChartBoostIOS.mm  host.mm
src/moai-ios-crashlytics/: MOAICrashlyticsIOS.mm
src/moai-ios-facebook/: MOAIFacebookIOS.h  MOAIFacebookIOS.mm
src/moai-ios-flurry/: MOAIFlurryIOS.h  MOAIFlurryIOS.mm
src/moai-ios-gamecenter/: MOAIGameCenterIOS.h  MOAIGameCenterIOS.mm
src/moai-ios-vungle/: MOAIVungleIOS.h  MOAIVungleIOS.mm
src/moai-sim/: MOAIAction.cpp  MOAIAction.h  MOAIAnimCurve.cpp  MOAIAttrOp.h  MOAIFont.cpp  MOAIFont.h  MOAIGfxDevice.cpp  MOAIGfxDevice.h  MOAIGfxDeviceVertexWriter.cpp  MOAIGfxDeviceVertexWriter.h  MOAIGfxQuadDeck2D.cpp  MOAIGfxQuadDeck2D.h  MOAIGfxQuadListDeck2D.cpp  MOAIGfxQuadListDeck2D.h  MOAIGfxResourceMgr.cpp  MOAIGfxResourceMgr.h  MOAIGraphicsProp.cpp  MOAIGraphicsProp.h  MOAIImage-png.cpp  MOAIImage.cpp  MOAIImage.h  MOAIImageFormatPng.cpp  MOAIImageFormatWebP.cpp  MOAIImageTexture.cpp  MOAIParticleEmitter.cpp  MOAIParticleEmitter.h  MOAIParticleScript.cpp  MOAIParticleSystem.cpp  MOAIScriptNode.cpp  MOAIScriptNode.h  MOAIShaderProgram.cpp  MOAIShaderUniform.cpp  MOAISim.cpp  MOAISim.h  MOAITextDesignParser.cpp  MOAITextLabel.cpp  MOAITextLabel.h  MOAITextStyle.cpp  MOAITextureBase.cpp  host.cpp  (+1 more)
src/moai-spine/: MOAISpineBone.cpp  MOAISpineSkeleton.cpp  MOAISpineSkeleton.h
src/moai-util/: MOAIDataBuffer.cpp  MOAIFileStream.cpp  MOAIFileSystem.cpp  MOAIImageLoadTask.cpp  MOAIImageLoadTask.h  MOAIStream.h
src/zl-gfx/: zl_gfx_opengl.cpp
src/zl-util/: ZLColor.cpp  ZLColor.h  ZLFloat.h  ZLUnique_linux.cpp
xcode/libmoai/libmoai.xcodeproj/: project.pbxproj
xcode/osx/MoaiSample.xcodeproj/: project.pbxproj
(+11 files in other folders)
